create like animation

--- a/src/pages/form_elements/form_elements.pug
+++ b/src/pages/form_elements/form_elements.pug
@@ -59,8 +59,9 @@ block layout_main
               +toggle('on')
               +toggle()
             .like_buttons
-              h3.like_button_title Like button
-              +like_button()
+              h3.like_buttons_title Like button
+              +like_button('2', 'off')
+              +like_button('12', 'on')
           .column-3
             h3 column3
             
