add Rate button and Range slider(70% done and work)

--- a/src/pages/form_elements/form_elements.pug
+++ b/src/pages/form_elements/form_elements.pug
@@ -6,6 +6,8 @@ include ../../components/checkbox/checkbox
 include ../../components/radio_button/radio_button
 include ../../components/toggle/toggle
 include ../../components/like_button/like_button
+include ../../components/rate_button/rate_button
+include ../../components/range-slider/range-slider
 
 
 
@@ -46,22 +48,28 @@ block layout_main
                 +text-field('subscription')
           .column-2
             .checbox_buttons 
-              h3.checbox_buttons_title Checkbox buttons
+              h3.column__title.checbox_buttons_title Checkbox buttons
               +checkbox('Можно курить')
               +checkbox("Можно с питомцами" , 'checked')
               +checkbox("Можно пригласить гостей (до 10 человек)" , 'checked')
             .radio_buttons
-              h3.radio_buttons_title Radio buttons
+              h3.column__title.radio_buttons_title Radio buttons
               +radio_button('Мужчина','checked')
               +radio_button('Женщина','checked')
             .toggles
-              h3.radio_buttons_title Toggle
+              h3.column__title.radio_buttons_title Toggle
               +toggle('on')
               +toggle()
             .like_buttons
-              h3.like_buttons_title Like button
+              h3.column__title.like_buttons_title Like button
               +like_button('2', 'off')
               +like_button('12', 'on')
+            .rate_buttons
+              h3.column__title.rate_buttons_title Rate button
+              +rate_button('4')
+              +rate_button('5')
           .column-3
-            h3 column3
+            .range-sliders
+              h3.column__title.rate_buttons_title Range slider
+              +range-slider()
             
