add Rate button and Range slider(all done)

--- a/src/pages/form_elements/form_elements.pug
+++ b/src/pages/form_elements/form_elements.pug
@@ -70,6 +70,6 @@ block layout_main
               +rate_button('5')
           .column-3
             .range-sliders
-              h3.column__title.rate_buttons_title Range slider
-              +range-slider()
+              h3.column__title.range_buttons_title Range slider
+              +range-slider('0','17000', '5000', '10000')
             
