--- a/src/pages/form_elements/form_elements.scss
+++ b/src/pages/form_elements/form_elements.scss
@@ -23,9 +23,9 @@
 .column__title {
   margin-bottom: 10px;
 }
-
-
-
+.range_buttons_title{
+  display: inline-block;
+}
 
 .input_elements{
   width: fit-content;
