--- a/src/pages/form_elements/form_elements.pug
+++ b/src/pages/form_elements/form_elements.pug
@@ -69,10 +69,13 @@ block layout_main
               +range-slider('0','17000', '5000', '10000')
             .buttons
               h3.column__title.buttons_title Buttons
-              +button('default')
-              +button('default','hovered')
-              +button('border')
-              +button('border','hovered')
+              +button('click me','default')
+              +button('click me','default','hovered')
+              +button('click me','border')
+              +button('click me','border','hovered')
+              +button('click me','text')
+              +button('click me','text','hovered')
+              +button('перейти к оплате','long')
 
 
 
